# seletive

./: db.sqlite3  pyproject.toml
empresa/: admin.py  models.py  urls.py  views.py
empresa/migrations/: 0004_vagas_email.py
empresa/templates/: empresa.html  nova_empresa.html  unica_empresa.html
seletive/: settings.py  urls.py
seletive/seletive/: settings.py
templates/: base.html
templates/static/empresa/css/: unica_empresa.css
vagas/: models.py  urls.py  views.py
vagas/migrations/: 0001_initial.py
vagas/templates/: vaga.html
