[tool.poetry]
name = "seletive"
version = "0.1.0"
description = "Implementação de exemplo do Pythonando"
authors = ["Andrimarciely Souza <andrimarciely@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
